@@ -27,6 +27,7 @@ var defaultConfig = config{
 }
 
 type config struct {
+	// List of containers' log files to tail
 	Containers containers `config:"containers"`
 
 	// Partial configures the input to join partial lines
@@ -42,6 +43,8 @@ type config struct {
 type containers struct {
 	IDs  []string `config:"ids"`
 	Path string   `config:"path"`
+
+	Paths []string `config:"paths"`
 
 	// Stream can be all, stdout or stderr
 	Stream string `config:"stream"`
