@@ -51,10 +51,19 @@ func NewInput(
 		return nil, errors.Wrap(err, "reading docker input config")
 	}
 
-	// Docker input should make sure that no callers should ever pass empty strings as container IDs
+	// Docker input should make sure that no callers should ever pass empty strings as container IDs or paths
 	// Hence we explicitly make sure that we catch such things and print stack traces in the event of
 	// an invocation so that it can be fixed.
-	var ids []string
+	var ids, paths []string
+	for _, p := range config.Containers.Paths {
+		if p != "" {
+			paths = append(paths, p)
+		} else {
+			logger.Error("Docker paths can't be empty for Docker input config")
+			logger.Debugw("Empty path for Docker logfile was received", logp.Stack("stacktrace"))
+		}
+	}
+
 	for _, containerID := range config.Containers.IDs {
 		if containerID != "" {
 			ids = append(ids, containerID)
@@ -64,12 +73,23 @@ func NewInput(
 		}
 	}
 
-	if len(ids) == 0 {
-		return nil, errors.New("Docker input requires at least one entry under 'containers.ids'")
+	if len(ids) == 0 && len(paths) == 0 {
+		return nil, errors.New("Docker input requires at least one entry under 'containers.ids' or 'containers.paths'")
 	}
 
-	for idx, containerID := range ids {
-		cfg.SetString("paths", idx, path.Join(config.Containers.Path, containerID, "*.log"))
+	// IDs + Path and Paths are mutually exclusive. Ensure that only one of them are set in a given configuration
+	if len(ids) != 0 && len(paths) != 0 {
+		return nil, errors.New("can not provide both 'containers.ids' and 'containers.paths' in the same input config")
+	}
+
+	if len(ids) != 0 {
+		for idx, containerID := range ids {
+			cfg.SetString("paths", idx, path.Join(config.Containers.Path, containerID, "*.log"))
+		}
+	} else {
+		for idx, p := range paths {
+			cfg.SetString("paths", idx, p)
+		}
 	}
 
 	if err := checkStream(config.Containers.Stream); err != nil {
@@ -90,6 +110,13 @@ func NewInput(
 
 	if err := cfg.SetBool("docker-json.force_cri_logs", -1, config.CRIForce); err != nil {
 		return nil, errors.Wrap(err, "update input config")
+	}
+
+	if len(paths) != 0 {
+		// Set symlinks to true as CRI-O paths could point to symlinks instead of the actual path.
+		if err := cfg.SetBool("symlinks", -1, true); err != nil {
+			return nil, errors.Wrap(err, "update input config")
+		}
 	}
 
 	// Add stream to meta to ensure different state per stream
